--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -4,7 +4,7 @@
     <div class="nav-row">
 
       <div class="nav-side brand">
-        <a href="/web1">
+        <a href="/">
           <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
         </a>
       </div>
@@ -23,11 +23,11 @@
 
       <!-- שמאל – כפתורים -->
       <div class="nav-side actions mr-1">
-        <a href="/חיפוש" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
+        <a href="/search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
           <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
         </a>
 
-        <a href="/מועדפים" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
+        <a href="favoritesPage.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
           <i class="fa-regular fa-heart" style="font-size: 24px;"></i>
         </a>
 
