--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -5,7 +5,7 @@
 
       <div class="nav-side brand">
         <a href="/">
-          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
+          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10px;">
         </a>
       </div>
 
