--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -41,7 +41,7 @@
 
   <div id="mobileMenu" class="mobile-menu">
     <a href="/קטגוריות/מוזיקה/" data-close="">מוזיקה</a>
-    <a href="/הסכתים/" data-close="">הסכתים</a>
+    <a href="podcastsPage.html" data-close="">הסכתים</a>
     <a href="programsSeries.html" data-close="">סדרות רשת</a>
     <a href="/תרבות-ופנאי/" data-close="">תרבות ופנאי</a>
     <a href="/קטגוריות/ילדים-ונוער/" data-close="">ילדים ונוער</a>
