--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -14,7 +14,7 @@
       <div class="nav-center nav-links">
         <a class="nav-link" href="musicPage.html">מוזיקה</a>
         <a class="nav-link" href="podcastsPage.html">הסכתים</a>
-        <a class="nav-link" href="programsSeries.html">סדרות רשת</a>
+        <a class="nav-link" href="sadarotReshet.html">סדרות רשת</a>
         <a class="nav-link" href="culturePage.html">תרבות ופנאי</a>
         <a class="nav-link" href="kidsPage.html">ילדים ונוער</a>
         <a class="nav-link" href="archivesPage.html">ארכיון</a>
@@ -40,12 +40,12 @@
   </div>
 
   <div id="mobileMenu" class="mobile-menu">
-    <a href="/קטגוריות/מוזיקה/" data-close="">מוזיקה</a>
+    <a href="musicPage.html" data-close="">מוזיקה</a>
     <a href="podcastsPage.html" data-close="">הסכתים</a>
-    <a href="programsSeries.html" data-close="">סדרות רשת</a>
-    <a href="/תרבות-ופנאי/" data-close="">תרבות ופנאי</a>
-    <a href="/קטגוריות/ילדים-ונוער/" data-close="">ילדים ונוער</a>
-    <a href="/ארכיון/" data-close="">ארכיון</a>
+    <a href="sadarotReshet.html" data-close="">סדרות רשת</a>
+    <a href="culturePage.html" data-close="">תרבות ופנאי</a>
+    <a href="kidsPage.html" data-close="">ילדים ונוער</a>
+    <a href="archivesPage.html" data-close="">ארכיון</a>
   </div>
 </nav>
 
