--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,10 +1,10 @@
 
 <footer class="custom-footer">
   <div class="footer-container">
-    
+
     <!-- טור ימין עם לוגו -->
     <div class="footer-logo">
-      <a href="/web1">
+      <a href="/">
         <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="גלצ פלוס">
       </a>
     </div>
@@ -13,12 +13,12 @@
     <div class="footer-column footer-links text-center">
       <h3>עמודי האתר</h3>
       <ul>
-        <li><a href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a></li>
-        <li><a href="/קטגוריות/סדרות-רשת/">סדרות רשת</a></li>
-        <li><a href="/תרבות-ופנאי/">תרבות ופנאי</a></li>
-        <li><a href="/הסכתים/">הסכתים</a></li>
-        <li><a href="/קטגוריות/מוזיקה/">מוזיקה</a></li>
-        <li><a href="/ארכיון/">ארכיון</a></li>
+        <li><a href="kidsPage.html">ילדים ונוער</a></li>
+        <li><a href="sadarotReshet.html">סדרות רשת</a></li>
+        <li><a href="culturePage.html">תרבות ופנאי</a></li>
+        <li><a href="podcastsPage.html">הסכתים</a></li>
+        <li><a href="musicPage.html">מוזיקה</a></li>
+        <li><a href="archivesPage.html">ארכיון</a></li>
       </ul>
     </div>
 
@@ -64,4 +64,5 @@
   <div class="footer-bottom">
     <p>© 2025 כל הזכויות שמורות - גל"צ פלוס</p>
   </div>
+  
 </footer>
