--- a/css/programStyle.css
+++ b/css/programStyle.css
@@ -124,7 +124,7 @@ body {
     transform: translate(-50%, -50%);
     font-size: 50px;
     color: white;
-    background: rgba(0, 0, 0, 0.6);
+    /* background: rgba(0, 0, 0, 0.6); */
     padding: 5px;
     text-decoration: none;
   }
