--- a/css/searchStyle.css
+++ b/css/searchStyle.css
@@ -1,5 +1,5 @@
 body {
-        background-image: url('/media/backimg.png');
+        background-image: url('/web1/media/backimg.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
