--- a/partials/footer.html
+++ b/partials/footer.html
@@ -25,12 +25,11 @@
     <div class="footer-column footer-links text-center">
       <h3>תכנים פופלרים</h3>
       <ul>
-        <li><a href="/תכניות/בטלים-בשישי/">בטלים בשישי</a></li>
-        <li><a href="/תכניות/דור-הביט/">דור הביט</a></li>
-        <li><a href="/תכניות/הבית-של-יעל/">הבית של יעל</a></li>
-        <li><a href="/תכניות/ספיישלים-מוזיקלים/">ספיישלים מוזיקלים</a></li>
-        <li><a href="/תכניות/מסע-כומתות/">מסע כומתות</a></li>
-        <li><a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/">פודקאסט על מוזיקה וטכנולוגיה</a></li>
+        <li><a href="program.html?id=tov-shebatem">טוב שבאתם</a></li>
+        <li><a href="program.html?id=melechblayizerhaim">מלך בלייצר חיים</a></li>
+        <li><a href="program.html?id=betalim">בטלים בשישי</a></li>
+        <li><a href="programsSeries.html?id=masa-comtot">מסע כומתות</a></li>
+        <li><a href="program.html?id=eamon">אי אמון</a></li>
       </ul>
     </div>
 
