--- a/css/episodeVideoPageStyle.css
+++ b/css/episodeVideoPageStyle.css
@@ -8,7 +8,7 @@ body{
 
     .video-container {
         max-width: 800px;
-        margin: 0 auto 20px;
+        margin: 33px auto 20px;
     }
 
     .video-container iframe {
